/*
 * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo's XGBoost models.
 */
package tribuo.common.xgboost;

option java_multiple_files = true;
option java_package = "org.tribuo.common.xgboost.protos";

// We use Any to encode polymorphism
import "google/protobuf/any.proto";

// Import Tribuo's core protos
import "tribuo-core.proto";

/*
XGBoostOutputConverter redirect proto
 */
message XGBoostOutputConverterProto {
  int32 version = 1;
  string class_name = 2;
  google.protobuf.Any serialized_data = 3;
}

/*
XGBoostModel proto
 */
message XGBoostModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  XGBoostOutputConverterProto converter = 2;
  repeated bytes models = 3;
}

/*
XGBoostExternalModel proto
 */
message XGBoostExternalModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  XGBoostOutputConverterProto converter = 2;
  bytes model = 3;
  repeated int32 forward_feature_mapping = 4;
  repeated int32 backward_feature_mapping = 5;
}
